ddd, Oct 10/22/2022, YYYY, 9:13 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -19,10 +19,12 @@
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
                 <!-- TODO: Add multiple choice question here -->
-                <h3>
+                <h3 class="question">
                     Who is the lecturer for Harvard's CS50 Course?
                 </h3>
-                
+                <button class="answer">David Malan</button>
+                <button class="answer">Brian Yu</button>
+                <button class="answer">Doug Lloyd</button>
             </div>
 
             <div class="section">
