--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -7,6 +7,7 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
+            document.querySelector(#answer).addEventListener
         </script>
     </head>
     <body>
