ddd, Oct 10/22/2022, YYYY, 9:19 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -7,7 +7,11 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
-            document.querySelector(#answer).addEventListener
+            function colchng()
+            {
+                
+            }
+            document.querySelector(#answer).addEventListener('click', colchng)
         </script>
     </head>
     <body>
