ddd, Oct 10/22/2022, YYYY, 9:24 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -9,6 +9,8 @@
             // TODO: Add code to check answers to questions
             function colchng()
             {
+                let correct = document.querySelector('#correct')
+                let wrong = document.querySelector('#wrong')
                 
             }
             document.querySelector(#answer).addEventListener('click', colchng)
@@ -27,9 +29,9 @@
                 <h3 class="question">
                     Who is the lecturer for Harvard's CS50 Course?
                 </h3>
-                <button class="answer">David Malan</button>
-                <button class="answer">Brian Yu</button>
-                <button class="answer">Doug Lloyd</button>
+                <button class="correct">David Malan</button>
+                <button class="wrong">Brian Yu</button>
+                <button class="wrong">Doug Lloyd</button>
             </div>
 
             <div class="section">
