ddd, Oct 10/22/2022, YYYY, 9:26 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -9,11 +9,13 @@
             // TODO: Add code to check answers to questions
             function colchng()
             {
-                let correct = document.querySelector('#correct')
-                let wrong = document.querySelector('#wrong')
-                
+                let button = document.querySelector('button');
+
             }
-            document.querySelector(#answer).addEventListener('click', colchng)
+            let button = document.querySelector('button');
+            document.querySelector(#correct).addEventListener('click', function() {
+                button.style.
+            })
         </script>
     </head>
     <body>
