ddd, Oct 10/22/2022, YYYY, 9:27 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -14,7 +14,7 @@
             }
             let button = document.querySelector('button');
             document.querySelector(#correct).addEventListener('click', function() {
-                button.style.
+                button.style.backgroundColour = '
             })
         </script>
     </head>
