ddd, Oct 10/22/2022, YYYY, 9:28 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -7,15 +7,13 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
-            function colchng()
-            {
-                let button = document.querySelector('button');
-
-            }
             let button = document.querySelector('button');
             document.querySelector(#correct).addEventListener('click', function() {
-                button.style.backgroundColour = '
-            })
+                button.style.backgroundColour = 'green';
+            });
+            document.querySelector(#wrong).addEventListener('click', function() {
+                button.style.backgroundColour = 'red';
+            });
         </script>
     </head>
     <body>
