--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -29,6 +29,8 @@
                 <h3 class="question">
                     Who is the lecturer for Harvard's CS50 Course?
                 </h3>
+                <p><small>Correct!</small></p>
+                <p><small>Incorrect!</small></p>
                 <button class="correct">David Malan</button>
                 <button class="wrong">Brian Yu</button>
                 <button class="wrong">Doug Lloyd</button>
