--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -8,10 +8,10 @@
         <script>
             // TODO: Add code to check answers to questions
             let button = document.querySelector('button');
-            document.querySelector(#correct).addEventListener('click', function() {
+            document.querySelector('#correct').addEventListener('click', function onClick() {
                 button.style.backgroundColour = 'green';
             });
-            document.querySelector(#wrong).addEventListener('click', function() {
+            document.querySelector('#wrong').addEventListener('click', function onClick() {
                 button.style.backgroundColour = 'red';
             });
         </script>
