--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -7,7 +7,7 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
-            let button = document.querySelector('button');
+            let button = document.querySelector('input');
             document.querySelector('#correct').addEventListener('click', function onClick() {
                 button.style.backgroundColour = 'green';
             });
@@ -31,6 +31,9 @@
                 </h3>
                 <p><small>Correct!</small></p>
                 <p><small>Incorrect!</small></p>
+                <input class="correct" type="submit" value="David Malan">
+                <input class="wrong" type="submit" value="Brian Yu">
+                <input class="wrong" type="submit" value="Doug Lloyd">
                 <button class="correct">David Malan</button>
                 <button class="wrong">Brian Yu</button>
                 <button class="wrong">Doug Lloyd</button>
