ddd, Oct 10/22/2022, YYYY, 9:44 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -31,9 +31,9 @@
                 </h3>
                 <p><small>Correct!</small></p>
                 <p><small>Incorrect!</small></p>
-                <input class="correct" type="submit" value="David Malan">
-                <input class="wrong" type="submit" value="Brian Yu">
-                <input class="wrong" type="submit" value="Doug Lloyd">
+                <input class="correct" type="button" value="David Malan">
+                <input class="wrong" type="button" value="Brian Yu">
+                <input class="wrong" type="button" value="Doug Lloyd">
                 <button class="correct">David Malan</button>
                 <button class="wrong">Brian Yu</button>
                 <button class="wrong">Doug Lloyd</button>
