--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -35,9 +35,9 @@
         <script>
             // TODO: Add code to check answers to questions
             window.addEventListener("load", function () {
-                let correct = document.querySelector('.correct');
-                correct.addEventListener('click', function () {
-                    correct.style.backgroundColor = 'green';
+                let button = document.querySelector('button');
+                document.querySelector('.correct').addEventListener('click', function onClick() {
+                    button.style.backgroundColour = 'green';
                 });
                 document.querySelector('.wrong').addEventListener('click', function onClick() {
                     button.style.backgroundColour = 'red';
