--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -36,7 +36,7 @@
             // TODO: Add code to check answers to questions
             window.addEventListener("load", function () {
                 let correct = document.querySelector('.correct');
-                b.querySelector('.correct').addEventListener('click', function onClick() {
+                correct.addEventListener('click', function onClick() {
                     correct.style.backgroundColour = 'green';
                 });
                 document.querySelector('.wrong').addEventListener('click', function onClick() {
