ddd, Oct 10/22/2022, YYYY, 10:12 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -38,6 +38,10 @@
                 let correct = document.querySelector('.correct');
                 correct.addEventListener('click', function () {
                     correct.style.backgroundColour = 'green';
+
+                    let correct = document.querySelector('.correct');
+            correct.addEventListener('click', function () {
+                correct.style.backgroundColor = 'green';
                 });
                 document.querySelector('.wrong').addEventListener('click', function () {
                     button.style.backgroundColour = 'red';
