ddd, Oct 10/22/2022, YYYY, 10:15 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -40,8 +40,11 @@
                     correct.style.backgroundColor = 'green';
                 });
                 let wrong = document.querySelector('.wrong');
-                wrong.addEventListener('click', function () {
-                    wrong.style.backgroundColor = 'red';
+                for (let i = 0, i < wrong.length; i++)
+                {
+                    wrong.addEventListener('click', function () {
+                        wrong.style.backgroundColor = 'red';
+                }
                 });
             });
         </script>
