ddd, Oct 10/22/2022, YYYY, 10:22 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -40,13 +40,12 @@
                     document.querySelector('.message').innerHTML = 'Correct!';
                 });
                 let wrong = document.querySelector('.wrong');
-                for (let i = 0, i < wrong.length; i++)
-                {
+                for (let i = 0, i < wrong.length; i++) {
                     wrong.addEventListener('click', function () {
                         wrong.style.backgroundColor = 'red';
                         document.querySelector('.message').innerHTML = 'Incorrect!';
+                    });
                 }
-                });
             });
         </script>
     </body>
