--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -38,14 +38,12 @@
                 let correct = document.querySelector('.correct');
                 correct.addEventListener('click', function () {
                     correct.style.backgroundColor = 'green';
-                    document.querySelector('.message').innerHTML = 'Correct!';
                 });
 
                 let wrong = document.querySelector('.wrong');
-                for (let i = 0, i < wrong.length; i++) {
+                for (let i = 0, i < wrong.length, i++) {
                     wrong.addEventListener('click', function () {
                         wrong.style.backgroundColor = 'red';
-                        document.querySelector('.message').innerHTML = 'Incorrect!';
                     });
                 }
             });
