--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -42,8 +42,8 @@
 
                 let wrong = document.querySelector('.wrong');
                 for (let i = 0, i < wrong.length, i++) {
-                    wrong.addEventListener('click', function () {
-                        wrong.style.backgroundColor = 'red';
+                    wrong[i].addEventListener('click', function () {
+                        wrong[i].style.backgroundColor = 'red';
                     });
                 }
             });
