--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -32,7 +32,7 @@
         </div>
         <script>
             // TODO: Add code to check answers to questions
-            window.addEventListener("load", function () {
+            window.addEventListener("DOMContentloaded", function () {
 
                 let correct = document.querySelector('.correct');
                 correct.addEventListener('click', function () {
