ddd, Oct 10/22/2022, YYYY, 10:43 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -38,7 +38,7 @@
                     correct.style.backgroundColor = 'green';
                 });
 
-                let wrong = document.querySelector('.wrong');
+                let wrong = document.querySelectorAll('.wrong');
                 wrong.addEventListener('click', function () {
                         wrong.style.backgroundColor = 'red';
                     });
