ddd, Oct 10/22/2022, YYYY, 10:46 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -38,10 +38,12 @@
                     correct.style.backgroundColor = 'green';
                 });
 
-                let wrong = document.querySelectorAll('.wrong');
-                wrong.addEventListener('click', function () {
+                let wrongs = document.querySelectorAll('.wrong');
+                for(i of wrongs) {
+                    i.addEventListener('click', function () {
                         wrong.style.backgroundColor = 'red';
                     });
+                }
             });
         </script>
     </body>
