ddd, Oct 10/22/2022, YYYY, 10:48 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -41,7 +41,7 @@
                 let wrongs = document.querySelectorAll('.wrong');
                 for(i of wrongs) {
                     i.addEventListener('click', function () {
-                        wrong.style.backgroundColor = 'red';
+                        i.style.backgroundColor = 'red';
                     });
                 }
             });
