--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -40,6 +40,7 @@
 
                 let wrongs = document.querySelectorAll('.wrong');
                 for(i of wrongs) {
+                    let wrongs = document.querySelectorAll('.wrong');
                     i.addEventListener('click', function () {
                         i.style.backgroundColor = 'red';
                     });
