ddd, Oct 10/22/2022, YYYY, 12:58 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -39,9 +39,9 @@
                 });
 
                 let wrongs = document.querySelectorAll('.wrong');
-                for(i of wrongs) {
-                    i.addEventListener('click', function () {
-                        i.style.backgroundColor = 'red';
+                for (let i = 0; i < wrongs.length; i++) {
+                    wrongs[i].addEventListener('click', function () {
+                        wrongs[i].style.backgroundColor = 'red';
                     });
                 }
             });
