--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -29,6 +29,10 @@
                 <h2>Part 2: Free Response</h2>
                 <hr>
                 <!-- TODO: Add free response question here -->
+                <h3 class="question">
+                    Which data type is used for a decimal in C?
+                </h3>
+                <input 
             </div>
         </div>
         <script>
@@ -47,6 +51,7 @@
                         document.querySelector('.message').innerHTML = 'Incorrect!';
                     });
                 }
+
             });
         </script>
     </body>
