ddd, Oct 10/22/2022, YYYY, 1:36 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -32,7 +32,9 @@
                 <h3 class="question">
                     Which data type is used for a decimal in C?
                 </h3>
-                <input 
+                <form>
+                    <input type="text" id="fname" name="fname" value="John"><br>
+                </form>
             </div>
         </div>
         <script>
