ddd, Oct 10/22/2022, YYYY, 1:39 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -33,7 +33,7 @@
                     Which data type is used for a decimal in C?
                 </h3>
                 <form>
-                    <input type="text" id="fname" name="fname" value="John"><br>
+                    <input ><br>
                 </form>
             </div>
         </div>
