ddd, Oct 10/22/2022, YYYY, 1:42 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -33,7 +33,8 @@
                     Which data type is used for a decimal in C?
                 </h3>
                 <form>
-                    <input ><br>
+                    <input type="text" placeholder="Type Answer"><br>
+                    <button></button>
                 </form>
             </div>
         </div>
