ddd, Oct 10/22/2022, YYYY, 1:43 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -34,7 +34,7 @@
                 </h3>
                 <form>
                     <input type="text" placeholder="Type Answer"><br>
-                    <button></button>
+                    <input type="submit">
                 </form>
             </div>
         </div>
