--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -33,8 +33,8 @@
                     Which data type is used for a decimal in C?
                 </h3>
                 <form>
-                    <input type="text" placeholder="Type Answer"><br>
-                    <input type="submit">
+                    <input class="answer" type="text" placeholder="Type Answer"><br>
+                    <input class="confirm" type="submit">
                 </form>
             </div>
         </div>
@@ -54,7 +54,7 @@
                         document.querySelector('.message').innerHTML = 'Incorrect!';
                     });
                 }
-
+                
             });
         </script>
     </body>
