ddd, Oct 10/22/2022, YYYY, 1:54 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -54,7 +54,12 @@
                         document.querySelector('.message').innerHTML = 'Incorrect!';
                     });
                 }
-                
+
+                let confirm = document.querySelector('.confirm');
+                let answer = document.querySelector('.answer')
+                confirm.addEventListener('click', function () {
+                    
+                    correct.style.backgroundColor = 'green';
             });
         </script>
     </body>
