ddd, Oct 10/22/2022, YYYY, 1:55 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -58,8 +58,10 @@
                 let confirm = document.querySelector('.confirm');
                 let answer = document.querySelector('.answer')
                 confirm.addEventListener('click', function () {
+                    if (confirm.value == 'float') {
+                    confirm.style.backgroundColor = 'green';
                     
-                    correct.style.backgroundColor = 'green';
+                    }
             });
         </script>
     </body>
