ddd, Oct 10/22/2022, YYYY, 2:01 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -35,7 +35,7 @@
                 <p class="confirmation2"></p>
                 <form>
                     <input class="answer" type="text" placeholder="Type Answer"><br>
-                    <input class="confirm" type="submit">
+                    <button class="confirm">Submit</button>
                 </form>
             </div>
         </div>
