ddd, Oct 10/22/2022, YYYY, 2:08 A +0

--- a/pset8/trivia/index.html
+++ b/pset8/trivia/index.html
@@ -66,6 +66,7 @@
                         answer.style.backgroundColor = 'red';
                         document.querySelector('.confirmation2').innerHTML = 'Incorrect!';
                     }
+                    return false;
                     });
             });
         </script>
