--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -5,9 +5,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>Rizvan Ali</title>
+        <h1>Rizvan Ali</h1>
+        <h2>Junior Software Engineer</h2>
     </head>
     <body>
-        hello, homepage
+        hello, world
     </body>
 </html>
