--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -9,9 +9,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <!-- linking css file -->
         <link href="styles.css" rel="stylesheet">
-        <h1>Rizvan Ali</h1>
-        <h2>Junior Software Engineer</h2>
+        <title>Portfolio - Rizvan Ali</title>
     </head>
+    <h1>Rizvan Ali</h1>
+    <h2>Junior Software Engineer</h2>
     <body>
         hello, world
 
