--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -11,8 +11,6 @@
         <link href="styles.css" rel="stylesheet">
         <title>Portfolio - Rizvan Ali</title>
     </head>
-    <h1>Rizvan Ali</h1>
-    <h2>Junior Software Engineer</h2>
     <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
         <div class="container">
             <a class="navbar-brand" href="#">Rizvan Ali</a>
@@ -22,16 +20,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="#index">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Blog</a>
+                        <a class="nav-link" href="#blog">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
