ddd, Oct 10/22/2022, YYYY, 2:50 A +0

--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -40,8 +40,54 @@
         </div>
     </nav>
     <body>
-        hello, world
-
+        <!-- Hero section -->
+        <section id="hero">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>Hi,<br>I am John</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet soluta veniam voluptate aliquam deleniti labore quod quis illum, sapiente nam nesciunt magni voluptatibus voluptatem incidunt placeat consequuntur quaerat voluptatum expedita!</p>
+                        <button type="button" class="btn btn-dark btn-lg">Book a Skype Call</button>
+                     </div>
+                     <div class="col">
+                         <img src="..." alt="...">
+                     </div>
+                </div>
+                <div class="row cards">
+                    <div class="col-md-4 d-flex justify-content-center">
+                      <div class="card">
+                          <div class="card-body">
+                              <!-- here is where they add the ICON -->
+                              <img src="..." alt="..." class="icon">
+                              <h5 class="card-title">Skills</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center">
+                      <div class="card">
+                          <div class="card-body">
+                              <!-- here is where they add the ICON -->
+                              <img src="..." alt="..." class="icon">
+                              <h5 class="card-title">Experience</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center">
+                      <div class="card">
+                          <div class="card-body">
+                              <!-- here is where they add the ICON -->
+                              <img src="..." alt="..." class="icon">
+                              <h5 class="card-title">Projects</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Hero section ends here →
 
     <!-- load javascript after loading all html content -->
     <script src="script/script.js"></script>
