ddd, Oct 10/22/2022, YYYY, 2:58 A +0

--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -50,7 +50,7 @@
                         <button type="button" class="btn btn-dark btn-lg">Book a Skype Call</button>
                      </div>
                      <div class="col">
-                         <img src="..." alt="...">
+                         <img src="pset8/homepage/images/20943447.jpg" alt="CV on a clipboard">
                      </div>
                 </div>
                 <div class="row cards">
@@ -92,4 +92,7 @@
     <!-- load javascript after loading all html content -->
     <script src="script/script.js"></script>
     </body>
+    <footer>
+        <a href="http://www.freepik.com">Designed by vectorjuice / Freepik</a>
+    </footer>
 </html>
