ddd, Oct 10/22/2022, YYYY, 2:59 A +0

--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -50,7 +50,7 @@
                         <button type="button" class="btn btn-dark btn-lg">Book a Skype Call</button>
                      </div>
                      <div class="col">
-                         <img src="pset8/homepage/images/20943447.jpg" alt="CV on a clipboard">
+                         <img src="images/20943447.jpg" alt="CV on a clipboard">
                      </div>
                 </div>
                 <div class="row cards">
