--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -20,19 +20,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#index">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About Me</a>
+                        <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#blog">Blog</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
 
@@ -45,9 +45,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h1>Hi,<br>I am John</h1>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet soluta veniam voluptate aliquam deleniti labore quod quis illum, sapiente nam nesciunt magni voluptatibus voluptatem incidunt placeat consequuntur quaerat voluptatum expedita!</p>
-                        <button type="button" class="btn btn-dark btn-lg">Book a Skype Call</button>
+                        <h1>Hi,<br>I'm Rizvan</h1>
+                        <p>Skilled Junior Software Engineer. Currently an impactful leader in education. Experience in implementing data structures and algorithms to build software solutions in C, Python, and Ruby. Interested in building skills in Agile Software Development, DevOps and Cloud Technologies.</p>
+                        <button type="button" class="btn btn-dark btn-lg">Contact Me</button>
                      </div>
                      <div class="col">
                          <img src="images/20943447.jpg" alt="CV on a clipboard">
