--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -60,7 +60,17 @@
     <!-- load javascript after loading all html content -->
     <script src="script/script.js"></script>
     </body>
-    <footer>
-        <a href="http://www.freepik.com">Designed by vectorjuice / Freepik</a>
+    <!-- footer section-->
+    <footer id="footer">
+        <div class="container-fluid">
+            <!-- social media icons -->
+            <div class="social-icons mt-4">
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+            </div>
+        </div>
     </footer>
 </html>
