--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -9,6 +9,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <!-- linking css file -->
         <link href="styles.css" rel="stylesheet">
+        <!-- font awesome -->
+        <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
         <title>Portfolio - Rizvan Ali</title>
     </head>
     <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
