--- a/pset8/homepage/about.html
+++ b/pset8/homepage/about.html
@@ -42,6 +42,24 @@
         </div>
     </nav>
     <body>
+        <!-- About Us -->
+        <section id="about-us">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <!-- another image can be inserted here -->
+                        <img src="..." alt="..." class="img-fluid"/>
+                    </div>
+                    <div class="col">
+                        <h1>About Me</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur reiciendis in quae, rem corporis id sequi debitis aliquam laudantium illum vel unde? Praesentium laboriosam neque eaque architecto maxime nihil?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur reiciendis in quae, rem corporis id sequi debitis aliquam laudantium illum vel unde? Praesentium laboriosam neque eaque architecto maxime nihil?</p>
+                        <button type="button" class="btn btn-dark btn-lg">Hire me!</button>
+                  </div>
+                </div>
+            </div>
+        </section>
+        <!-- End of About Us -->
      <!-- load javascript after loading all html content -->
      <script src="script/script.js"></script>
     </body>
