ddd, Oct 10/22/2022, YYYY, 3:35 A +0

--- a/pset8/homepage/portfolio.html
+++ b/pset8/homepage/portfolio.html
@@ -42,6 +42,48 @@
         </div>
     </nav>
     <body>
+        <!-- Projects section -->
+        <div class="container">
+            <div class="row align-items-center projects">
+                <div class="col">
+                  <h1>Our Project</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quod aliquam corporis tempore nostrum. Animi rem quisquam deleniti qui ad ipsa quod! Animi corrupti, ex blanditiis dolor error nulla consectetur.</p>
+                </div>
+                <div class="row align-items-center">
+                  <div class="col">
+                      <div class="card mb-3">
+                          <img src="..." class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Title 1</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Some useful info</small></p>
+                          </div>
+                        </div>
+                  </div>
+                  <div class="col">
+                      <div class="card mb-3">
+                          <img src="..." alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Title 2</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Some useful info</small></p>
+                          </div>
+                        </div>
+                  </div>
+                  <div class="col">
+                      <div class="card mb-3">
+                          <img src="..." alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Title 3</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Some useful info</small></p>
+                          </div>
+                        </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+        <!-- End of Projects Section -->
      <!-- load javascript after loading all html content -->
      <script src="script/script.js"></script>
     </body>
