ddd, Oct 10/22/2022, YYYY, 3:40 A +0

--- a/pset8/homepage/index.html
+++ b/pset8/homepage/index.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h1>Hi,<br>I'm Rizvan</h1>
+                        <h1 id="typed"></h1>
                         <p>Skilled Junior Software Engineer. Currently an impactful leader in education. Experience in implementing data structures and algorithms to build software solutions in C, Python, and Ruby. Interested in building skills in Agile Software Development, DevOps and Cloud Technologies.</p>
                         <button type="button" class="btn btn-dark btn-lg">Contact Me</button>
                      </div>
