--- a/pset8/homepage/blog.html
+++ b/pset8/homepage/blog.html
@@ -42,6 +42,9 @@
         </div>
     </nav>
     <body>
+        <section id="blog">
+
+        </section>
      <!-- load javascript after loading all html content -->
      <script src="script/script.js"></script>
     </body>
