--- a/pset8/homepage/about.html
+++ b/pset8/homepage/about.html
@@ -52,8 +52,9 @@
                               <div class="card-header" id="headingOne">
                                 <h5 class="mb-0">
                                   <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    
+                                    <i class="fa-solid fa-plus"></i>
                                   </button>
+                                  <i class="fa-solid fa-plus"></i>
                                 </h5>
                               </div>
 
