--- a/pset8/homepage/about.html
+++ b/pset8/homepage/about.html
@@ -54,10 +54,10 @@
                       <div class="accordion accordion-borderless" id="accordionFlushExampleX">
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="flush-headingOneX">
-                            <button class="accordion-button" type="button" data-mdb-toggle="collapse"
+                              <a class="accordion-button" type="button" data-mdb-toggle="collapse"
                               data-mdb-target="#flush-collapseOneX" aria-expanded="true" aria-controls="flush-collapseOneX">
                               Accordion Item #1
-                            </button>
+                              </a>
                           </h2>
                           <div id="flush-collapseOneX" class="accordion-collapse collapse show"
                             aria-labelledby="flush-headingOneX" data-mdb-parent="#accordionFlushExampleX">
@@ -69,10 +69,10 @@
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="flush-headingTwoX">
-                            <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+                            <a class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
                               data-mdb-target="#flush-collapseTwoX" aria-expanded="false" aria-controls="flush-collapseTwoX">
                               Accordion Item #2
-                            </button>
+                            </a>
                           </h2>
                           <div id="flush-collapseTwoX" class="accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
                             data-mdb-parent="#accordionFlushExampleX">
@@ -85,10 +85,10 @@
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="flush-headingThreeX">
-                            <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+                            <a class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
                               data-mdb-target="#flush-collapseThreeX" aria-expanded="false" aria-controls="flush-collapseThreeX">
                               Accordion Item #3
-                            </button>
+                            </a>
                           </h2>
                           <div id="flush-collapseThreeX" class="accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
                             data-mdb-parent="#accordionFlushExampleX">
