--- a/pset8/homepage/about.html
+++ b/pset8/homepage/about.html
@@ -56,7 +56,7 @@
                           <h2 class="accordion-header" id="flush-headingOneX">
                               <a class="accordion-button" type="button" data-mdb-toggle="collapse"
                               data-mdb-target="#flush-collapseOneX" aria-expanded="true" aria-controls="flush-collapseOneX">
-                              Accordion Item #1
+                              EDUCATION
                               </a>
                           </h2>
                           <div id="flush-collapseOneX" class="accordion-collapse collapse show"
@@ -71,7 +71,7 @@
                           <h2 class="accordion-header" id="flush-headingTwoX">
                             <a class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
                               data-mdb-target="#flush-collapseTwoX" aria-expanded="false" aria-controls="flush-collapseTwoX">
-                              Accordion Item #2
+                              EMPLOYMENT
                             </a>
                           </h2>
                           <div id="flush-collapseTwoX" class="accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
@@ -87,7 +87,7 @@
                           <h2 class="accordion-header" id="flush-headingThreeX">
                             <a class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
                               data-mdb-target="#flush-collapseThreeX" aria-expanded="false" aria-controls="flush-collapseThreeX">
-                              Accordion Item #3
+                              LEARNING AND DEVELOPMENT
                             </a>
                           </h2>
                           <div id="flush-collapseThreeX" class="accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
