--- a/pset8/homepage/about.html
+++ b/pset8/homepage/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,7 +13,7 @@
         <!-- MDB -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet"/>
         <!-- linking css file -->
-        <link href="styles.css" rel="stylesheet">
+        <link href="{% static 'homepage.css' %}" rel="stylesheet">
         <!-- font awesome -->
         <script src="https://kit.fontawesome.com/48ee008338.js" crossorigin="anonymous"></script>
         <title>Portfolio - Rizvan Ali</title>
